feat(gif): get by id endpoint
