# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\UserController;
+use App\Http\Controllers\Gif\GetGifController;
 use App\Http\Controllers\Gif\SearchGifsController;
 use Illuminate\Support\Facades\Route;
 
@@ -24,4 +25,5 @@ Route::group(['middleware' => ['auth:api']], function () {
     Route::get('/auth/user', UserController::class)->name('auth.user');
 
     Route::get('/gifs/search', SearchGifsController::class)->name('gif.search');
+    Route::get('/gifs/{id}', GetGifController::class)->name('gif.get');
 });
